# mkdocs

./: .codecov.yml  .coveragerc  .csslintrc  .dockerignore  .editorconfig  .flake8  .gitattributes  .gitignore  .jshintignore  .markdownlint.yaml  .markdownlintrc  .pre-commit-hooks.yaml  .travis.sh  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  FUNDING.yml  LICENSE  MANIFEST.in  Makefile  README.md  appveyor.yml  base.html  berkeley.yml  class.MD  class.md  codecov.yml  deploy-docs.sh  elstir.yml  ez_setup.py  file1.md  hatch_build.py  hooks.py  index.html  index.json  mdl_ruleset.rb  messages.pot  mkdoc.py  (+23 more)
.github/: FUNDING.yml
.github/workflows/: autofix.yml  ci.yml  deploy-release.yml  docs.yml  tox.yml
about/contributing/: index.html  index.json
about/license/: index.html  index.json
about/release-notes/: index.html  index.json
assets/: _mkdocstrings.css
community/demos/: SystemEye.md
courseProjectCode/Metrics/: README.md  SAMPLE_metrics.yaml  metrics-scanner.py  mkdocs_metrics.md
courseProjectCode/Unit-Testing/: test_mocks_stubs.py
courseProjectCode/UnitTesting/: test_edge_cases.py
courseProjectCode/mutation-testing/: README.md  test_content_section_eq.py  test_utils_get_build_time_mutations.py  test_utils_mutations.py
courseProjectDocs/: 01-project-proposal.md  02-requirements-and-oracles.md  03-setup.md  04-unit-testing.md  05-mocking.md  06-midpoint-report.md  07-mutation-testing.md  08-static-analysis.md  09-integration-testing.md  10-system-testing.md  11-security-testing.md  12-performance-testing.md  metrics-scanner.py  mutation-testing.md  project-proposal.md  setup.md
courseProjectDocs/Setup/: README.md  report.md  testCoverage  testResults
courseProjectDocs/Unit-Testing/: README.md  mocking.md  report.md
courseProjectDocs/mutation-testing/: README.md  report.md
css/: base.css  bootstrap.min.css  extra.css  font-awesome-4.5.0.css  highlight.css  pygments.css
css/compiled/: expanded-theme.css  theme.css
dev-guide/: index.html
dev-guide/api/: index.html
dev-guide/plugins/: index.html
dev-guide/themes/: index.html
dev-guide/translations/: index.html
docker/: Dockerfile
docker/hooks/: build
docs/: CNAME  Dockerfile  dist  getting-started.md  hooks.py  index.md  select-theme.md
docs/about/: contributing.md  index.md  license.md  release-notes.md  themes-translation.md
docs/api/: base-views.md  model-views.md
docs/css/: extra.css
docs/dev-guide/: README.md  api.md  index.md  plugins.md  themes.md  translating-themes.md  translations.md
docs/guide-orga/: index.md
docs/img/: plugin-events.gv  plugin-events.py
docs/migration/: base-views.md  model-views.md
docs/shims/: fetch_shim.js
docs/topics/: django-braces-compatibility.md  django-extra-views-compatibility.md  frequently-asked-questions.md  release-notes.md
docs/user-guide/: README.md  choosing-your-theme.md  cli.md  configuration.md  custom-themes.md  customizing-your-theme.md  deploying-your-docs.md  faq.md  index.md  installation.md  layouts.md  localizing-your-theme.md  managing-dependencies.md  plugins.md  styling-your-docs.md  writing-your-docs.md
fonts/: entypo.eot  flexslider-icon.eot  icomoon.eot
getting-started/: index.html
icons/brankic/: selection.json  style.css
icons/entypo/: Read Me.txt  selection.json  style.css
icons/icomoon/: selection.json  style.css
js/: base.js  bootstrap.min.js  highlight.pack.js  jquery-1.10.2.min.js
license/highlight.js/: LICENSE
mkdocs/: __init__.py  __main__.py  _compat.py  build.py  cli.py  compat.py  config.py  events.py  exceptions.py  gh_deploy.py  legacy.py  localization.py  main.py  mkdocs  mkdocs.py  nav.py  new.py  plugins.py  relative_path_ext.py  search.py  search_index.json  serve.py  setup_command.py  test.py  theme.py  toc.py  utils.py
mkdocs.egg-info/: PKG-INFO  SOURCES.txt
mkdocs/commands/: add.py  babel.py  build.py  get_deps.py  gh_deploy.py  new.py  serve.py  setup.py
mkdocs/config/: __init__.py  base.py  config_options.py  defaults.py  validators.py
mkdocs/livereload/: __init__.py  livereload.js
mkdocs/mdextensions/: relative_path.py
mkdocs/statics/: sitemap.xml
mkdocs/structure/: __init__.py  files.py  nav.py  pages.py  toc.py  urls.py
mkdocs/templates/: sitemap.xml
requirements/: lint.txt  packaging.txt  project-min.txt  project.txt  requirements-babel.txt  requirements-docs.txt  requirements-style.txt  test.txt
search/: lunr.js  lunr.min.js  main.js  require.js  search-results-template.mustache  search.js  search_index.json  text.js  worker.js
src/elstir/themes/odette/: .travis.yml  404.html  base.html  config.html  content.html  elstir_theme.yml  main.html  modellib.html  nav-sub.html  netlify.toml  pyproject.toml  search.html  toc.html
src/elstir/themes/odette/css/: _bootswatch.scss  _variables.scss  alabaster copy.css  alabaster-overrides.css  base.css  bootstrap.css  bootstrap.css.map  bootstrap.min.css  bootstrap.min.css.map  odette.css  starter.scss
src/elstir/themes/odette/css/.archive/: base copy.css
src/elstir/themes/odette/docs/: guide.md  license.md
src/elstir/themes/odette/js/: base.js  theme.js
src/elstir/themes/odette/mkdocs_alabaster/: main.html
src/elstir/themes/odette/mkdocs_alabaster/css/: alabaster-overrides.css  alabaster.css
src/elstir/themes/odette/mkdocs_alabaster/inc/: homepage_nav.html
src/elstir/themes/odette/mkdocs_alabaster/sidebars/: about.html  related.html  search.html  toc.html
src/elstir/themes/odette/partials/: _filter_card_index3.html  _xfilter_card_index3.html  card_index.html  feature_index.html  filter_card_index.html  filter_card_index2.html  filter_card_index3.html  nest_card_index.html
src/elstir/themes/odette/sidebars/: navigation.html  search.html
src/elstir/themes/odette/src/: .gitignore  LICENSE.md  README.md  elstir.yml
src/elstir/themes/odette/src/docs/: dev.md  index.md
swen777/: 00-deliverables.md  01-project-proposal.md  03-setup.md
tests/: integration.py  test_utils_mutations.py
theme/: base.html
united/: base.html  toc.html
user-guide/: index.html
(+416 files in other folders)
