[metadata]
license_file = LICENSE

[compile_catalog]
statistics = True
domain = messages

[extract_messages]
copyright_holder = MkDocs
domain = messages
msgid_bugs_address = "https://github.com/mkdocs/mkdocs/issues"
project = MkDocs
no_wrap = True

[init_catalog]
domain = messages

[update_catalog]
ignore_obsolete = True
update_header_comment = True
domain = messages

[black]
line-length = 119

[flake8]
max-line-length = 119
ignore = E125,E129,W503,W504
exclude = .venv/,.git/,.tox/
