[metadata]
license_files = LICENSE

[flake8]
max-line-length = 119
extend-ignore = E203

[isort]
profile = black
line_length = 100

[mypy]
ignore_missing_imports = true
warn_unreachable = true
no_implicit_optional = true
show_error_codes = true

[compile_catalog]
statistics = True
domain = messages

[extract_messages]
copyright_holder = MkDocs
domain = messages
msgid_bugs_address = "https://github.com/mkdocs/mkdocs/issues"
project = MkDocs
no_wrap = True

[init_catalog]
domain = messages

[update_catalog]
ignore_obsolete = True
update_header_comment = True
domain = messages
