[tool.poetry]
name = "mkdocs-alabaster"
version = "0.8.0"
description = "Alabaster port for MkDocs"
authors = ["Alexander Pushkov <alexander@notpushk.in>"]
readme = "README.md"
include = ["LICENSE.md"]

[tool.poetry.dependencies]
python = "^3.6"
mkdocs = "^1.0"

[tool.poetry.plugins."mkdocs.themes"]
"alabaster" = "mkdocs_alabaster"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
